AC_INIT([ITVal],[1.1],[rmmarm@sdf.lonestar.org])
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(ITVal,1.1)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_LIBTOOL
AC_CHECK_FUNCS(getline)
AC_CONFIG_FILES([Makefile FDDL/Makefile doc/Makefile doc/Examples/Makefile doc/Rsets/Makefile])
AC_OUTPUT
